--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Croissant</title>
+    <meta
+      name="description"
+      content="Get to know more about croissants and how to prepare them"
+    />
+    <title>What is a croissant?</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -19,8 +23,14 @@
       dough. Croissants are named for their historical crescent shape.
     </p>
     <footer>
-      <a href="about.html" class="btn btn-warning">About Croissants</a>
-      <span> <a href="contact.html" class="btn btn-danger">Contact Us</a></span>
+      <a href="about.html" class="btn btn-warning" title="Recipes"
+        >About Croissants</a
+      >
+      <span>
+        <a href="contact.html" class="btn btn-danger" title="Email"
+          >Contact Us</a
+        ></span
+      >
     </footer>
   </body>
 </html>
